# session-diary

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  pyproject.toml
.claude/: index.json
docs/: 2026-05-02-session-diary-plugin-design.md
docs/superpowers/plans/: 2026-05-02-session-diary-plugin.md
session_diary/: CLAUDE.md  __init__.py  config.py  counter.py  extractor.py  installer.py  save_hook.py  sessionstart_hook.py  state.py
tests/: CLAUDE.md  conftest.py  test_config.py  test_counter.py  test_extractor.py  test_installer.py  test_save_hook.py  test_sessionstart_hook.py  test_state.py
